[package]
name = "redis-fs"
version = "0.1.0"
edition = "2021"
authors = ["Sahand <sahandevs@gmail.com>"]
license = "MIT"
description = "Access your redis database from the file system!"
readme = "README.md"
homepage = "https://github.com/sahandevs/redis-fs"
repository = "https://github.com/sahandevs/redis-fs"
keywords = ["cli", "redis", "fuse"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.86"
bytes = "1.7.1"
clap = { version = "4.5.15", features = ["cargo", "derive"] }
dashmap = "6.0.1"
env_logger = "0.11.5"
fuse3 = { version = "0.7.2", features = ["tokio-runtime", "unprivileged"] }
futures-util = "0.3.30"

libc = "0.2.155"
log = "0.4.22"
redis = { version = "0.26.1", features = ["aio", "tokio-comp"] }
tokio = { version = "1.39.2", features = ["full"] }
